[#17939] List.of changed to Arrays.asList